re PR tree-optimization/51070 (ICE verify_gimple failed)

2012-01-03  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/51070
	* tree-loop-distribution.c (stmt_has_scalar_dependences_outside_loop):
	Properly handle calls.

	* gcc.dg/torture/pr51070-2.c: New testcase.

From-SVN: r182839